# habr-obscene-filter

./: .env  .example.env  Makefile  README.md  docker-compose.yml
src/: Dockerfile  pyproject.toml  pytest.ini
src/api/: admin.py
src/api/internal/: app.py
src/api/internal/obscenity_filter/: admin.py  app.py  models.py  routers.py
src/api/internal/obscenity_filter/services/: obscenity_filter.py  transfromations.py
src/api/internal/obscenity_filter/transport/: handlers.py  requests.py  responses.py
src/api/migrations/: 0001_initial.py  0002_initial.py
src/config/: settings.py  urls.py
src/templates/admin/: csv_form.html  import_change_list.html
src/tests/: test_obscenity_filter.py
